# gazebo_urdf_image_textures

./: CMakeLists.txt  README.md  package.xml
launch/: spawn_aruco_cube.launch  spawn_simple_cube1.launch  spawn_simple_cube2.launch
media/materials/scripts/: aruco_cube.material  simple_cube.material
urdf/aruco_cube/: aruco_cube.gazebo.xacro  aruco_cube.urdf.xacro
urdf/simple_cube1/: simple_cube1.gazebo.xacro  simple_cube1.urdf.xacro
urdf/simple_cube2/: simple_cube2.gazebo.xacro  simple_cube2.urdf.xacro
