<?xml version="1.0"?>
<package format="2">
  <name>example_models</name>
  <version>0.0.0</version>
  <description>The example_models package</description>

  <maintainer email="fynn.boyer@todo.todo">Fynn Boyer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Required to let gazebo load the textures -->  
  <exec_depend>gazebo_ros</exec_depend> 

  <export>
    <!-- Required to let gazebo load the textures -->  
    <gazebo_ros gazebo_media_path="${prefix}"/>  
  </export>
</package>
